# bulkdnsquery

./: README.md  pyproject.toml
src/: bulkdnsquery.py  dnscheck.py
